--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SwiftyJSON"]
 	path = SwiftyJSON
-	url = https://github.com/lingoer/SwiftyJSON.git
+	url = https://github.com/SwiftyJSON/SwiftyJSON.git
