添加二维码扫描结果能在网页中打开
ADD 添加二维码扫描结果能在网页中打开

--- a/OpenCode/ToolList.plist
+++ b/OpenCode/ToolList.plist
@@ -4,6 +4,13 @@
 <dict>
 	<key>Tool</key>
 	<dict>
+		<key>LANScan</key>
+		<dict>
+			<key>Name</key>
+			<string>局域网扫描</string>
+			<key>Image</key>
+			<string></string>
+		</dict>
 		<key>QRCode</key>
 		<dict>
 			<key>Name</key>
